# lista-de-exercicios-algoritmos

./: CMakeLists.txt
Atividades/Bombeiro/: CMakeLists.txt  bombeiro.c  bombeiros.txt
Atividades/Fita/: CMakeLists.txt  main.c  main.h
Atividades/Fita/docs/: entrada.txt
Parte 1/: README.md  main.c
Parte 2/: CMakeLists.txt  README.md  aula01.c  aula03.c  aula04.c  aula05.c
Parte03-GreedyAndDynamic/: CMakeLists.txt  greedy.c
Parte03-GreedyAndDynamic/doc/dynamic/: geraSubSequencias_LCS.c  testaPiramide.c
Parte03-GreedyAndDynamic/doc/greedy/: SelecaoAtividades.c  Troco.c
