project ("Aula 01 - Recursao")
add_executable("Aula 01 - Recursao"
	aula01.c
)

project ("Aula 03 - Enumeracao")
add_executable("Aula 03 - Enumeracao"
	aula03.c
)

project ("Aula 04 - Algoritmos Força Bruta")
add_executable("Aula 04 - Algoritmos Força Bruta"
	aula04.c
)

project ("Exercicios Algoritmos")


